package modelo.enums;

public enum TipoCombustible {
    NAFTA, DIESEL, GNC, ELECTRICO, HIBRIDO
}
