package modelo.enums;

public enum TipoEntidad {
    CLIENTE, VEHICULO, ALQUILER, PAGO
}
