package modelo.enums;

public enum TipoPago {
    SENIA, SALDO
}
