package modelo.enums;

public enum TipoVehiculo {
    AUTO, CAMIONETA, UTILITARIO, MOTO
}
