    @startuml DC_AlquilerVehiculos_MVC_Refinado
    skinparam classAttributeIconSize 0
    skinparam linetype ortho
    hide empty members

    ' ─────────────── ENUMS ───────────────
    enum EstadoCliente { ACTIVO; INACTIVO }
    enum EstadoVehiculo { DISPONIBLE; ALQUILADO; MANTENIMIENTO; BAJA }
    enum EstadoAlquiler { INGRESADO; CONFIRMADO; EN_CURSO; FINALIZADO; CANCELADO }
    enum EstadoPago { REGISTRADO; CONFIRMADO; ANULADO }
    enum TipoVehiculo { AUTO; CAMIONETA; UTILITARIO; MOTO }
    enum TipoCombustible { NAFTA; DIESEL; GNC; ELECTRICO; HIBRIDO }
    enum MedioPago { EFECTIVO; TRANSFERENCIA; TARJETA; BILLETERA_VIRTUAL }
    enum TipoPago { SENIA; SALDO }
    enum TipoEntidad { CLIENTE; VEHICULO; ALQUILER; PAGO }

    ' ─────────────── COMPONENTES DEL MODELO ───────────────

    class HistorialCambioEstado {
        - id : int
        - fechaCambio : Date
        - estadoAnterior : String
        - estadoNuevo : String
        - tipoEntidad : TipoEntidad
        - referenciaEntidad : String
        - usuarioResponsable : String
        + HistorialCambioEstado(fecha, ant, nuevo, tipo, ref, usr)
    }

    class Cliente {
        - dniCuit : String
        - nombreRazonSocial : String
        - telefono : String
        - email : String
        - direccion : String
        - estado : EstadoCliente
        - creditoAFavor : double
        + Cliente(dniCuit, nombre, tel, email, dir)
        + activar() : void
        + agregarCredito(importe : double) : void
        + getDniCuit() : String
    }

    class Vehiculo {
        - patente : String
        - marca : String
        - modelo : String
        - anio : int
        - kilometrajeActual : int
        - estado : EstadoVehiculo
        - valorDiario : double
        - tipoVehiculo : TipoVehiculo
        - tipoCombustible : TipoCombustible
        - kmIncluidosPorDia : int
        - costoKmExcedente : double
        + Vehiculo(patente, marca, mod, anio, km, val, tipo, comb, kmD, cKm)
        + cambiarEstado(nuevoEstado : EstadoVehiculo) : void
        + estaDisponible(fInicio : Date, fFin : Date, alquileres : List) : boolean
        + actualizarKilometraje(kmFinal : int) : void
        + getPatente() : String
        + getTipoVehiculo() : TipoVehiculo
    }

    class Pago {
        - id : int
        - fecha : Date
        - importe : double
        - medioPago : MedioPago
        - estado : EstadoPago
        - usuarioRegistrador : String
        - tipoPago : TipoPago
        + Pago(id, fecha, importe, medioPago, usr, tipo)
        + esSeniaConfirmada() : boolean
        + getImporte() : double
    }

    abstract class Alquiler {
        - id : int
        - fechaInicio : Date
        - fechaDevolucionEstimada : Date
        - fechaDevolucionReal : Date
        - estado : EstadoAlquiler
        - kilometrajeInicial : int
        - kilometrajeFinal : int
        - importeTotal : double
        - importePendiente : double
        + Alquiler(cliente, vehiculo, fInicio, fDevEst, kmIni)
        + cambiarEstado(nuevoEstado : EstadoAlquiler) : void
        + calcularDias() : int
        + calcularImporteBase() : double
        + calcularKmExcedentes() : double
        + calcularSeniaAbonada() : double
        + calcularSaldoPendiente() : double
        + agregarPago(pago : Pago) : void
        + {abstract} calcularImporteTotal() : double
        + getId() : int
    }

    class AlquilerComun { + calcularImporteTotal() : double }
    class AlquilerCorporativo { - porcentajeDescuento : double; + calcularImporteTotal() : double }
    class AlquilerTuristico { - porcentajeRecargo : double; + calcularImporteTotal() : double }

    ' ─────────────── CONTROLADORES (MVC - SINGLETON) ───────────────

    class ClienteController <<Singleton>> {
        -{static} instancia : ClienteController
        - clientes : List<Cliente>
        - ClienteController()
        +{static} getInstancia() : ClienteController
        + registrarCliente(dniCuit, nombre, tel, email, dir, usuario) : Cliente
        + buscarClientePorDniCuit(dniCuit : String) : Cliente
    }

    class VehiculoController <<Singleton>> {
        -{static} instancia : VehiculoController
        - vehiculos : List<Vehiculo>
        - VehiculoController()
        +{static} getInstancia() : VehiculoController
        + registrarVehiculo(patente, marca, mod, anio, km, val, tipo, comb, kmD, cKm, usuario) : Vehiculo
        + buscarVehiculoPorPatente(patente : String) : Vehiculo
        + consultarVehiculosDisponibles(fInicio, fFin, tipo) : List<Vehiculo>
    }

    class AlquilerController <<Singleton>> {
        -{static} instancia : AlquilerController
        - alquileres : List<Alquiler>
        ' Centraliza la persistencia de auditoría del sistema
        - historialesAuditoria : List<HistorialCambioEstado> 
        - AlquilerController()
        +{static} getInstancia() : AlquilerController
        + solicitarAlquiler(dniCuit, patente, fInicio, fFin, clase, usuario) : Alquiler
        + confirmarAlquilerConSenia(idAlquiler, importe, medioPago, usuario) : Pago
        + finalizarAlquiler(idAlquiler, kmFinal, fDevReal, usuario) : double
        + registrarHistorialInterno(fecha, ant, nuevo, tipo, ref, usr) : void
    }

    ' ─────────────── VISTAS (SWING) ───────────────

    class RegistrarClienteView { - ctrl : ClienteController }
    class SolicitarAlquilerView { - ctrlAlq : AlquilerController; - ctrlCli : ClienteController; - ctrlVeh : VehiculoController }
    class ConsultarDisponibilidadView { - ctrlVeh : VehiculoController }

    ' ─────────────── RELACIONES ───────────────

    Alquiler <|-- AlquilerComun
    Alquiler <|-- AlquilerCorporativo
    Alquiler <|-- AlquilerTuristico

    Cliente   "1" o-- "0..*" Alquiler : solicita >
    Vehiculo  "1" o-- "0..*" Alquiler : es alquilado en >
    Alquiler  "1" *-- "0..*" Pago     : contiene >

    RegistrarClienteView        ..> ClienteController : usa
    ConsultarDisponibilidadView ..> VehiculoController : usa
    SolicitarAlquilerView       ..> AlquilerController : usa

    ClienteController "1" *-- "0..*" Cliente : gestiona >
    VehiculoController "1" *-- "0..*" Vehiculo : gestiona >
    AlquilerController "1" *-- "0..*" Alquiler : gestiona >
    AlquilerController "1" *-- "0..*" HistorialCambioEstado : almacena auditoría >

    AlquilerController ..> ClienteController : consulta >
    AlquilerController ..> VehiculoController : consulta >

    @enduml